--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -93,6 +93,15 @@
 Сравнивали содержимое постов и интересов пользователя при помощи LDA.
 ` %>
 
+<% i18n.movieRecommendations = "Рекомендательная система фильмов" %>
+<% i18n.movieRecommendationsDesc = `
+Реализовывал два способа и как ответ брал максимальную вероятность:
+<br>
+1. Использовал SVD-разложение матрицы {люди х фильмы} и брал косинусное расстояние между U[человек, все компоненты] * s и Vt[все компоненты, фильм].
+<br>
+2. Вычислял косинусное расстояние между непосредственно строками матриц {фильмы x (жанры + признаки)} и {люди x (жанры + признаки)}.
+` %>
+
 <% i18n.tgbotCpp = "tgbot-cpp" %>
 <% i18n.tgbotCppDesc = `
 C++ библиотека для Telegram bot API.
@@ -101,16 +110,6 @@ C++ библиотека для Telegram bot API.
 <% i18n.vkChannelify = "VK Channelify" %>
 <% i18n.vkChannelifyDesc = `
 Пересылает новости из группы ВК в Телеграмм канал.
-` %>
-
-<% i18n.raycord = "Raycord Legends" %>
-<% i18n.raycordDesc = `
-MLP & Rayman Legends кроссовер.
-` %>
-
-<% i18n.mars2000 = "MARS 2000" %>
-<% i18n.mars2000Desc = `
-Олдскульный top-down шутер.
 ` %>
 
 <%# Portfolio controls %>
@@ -142,6 +141,9 @@ MLP & Rayman Legends кроссовер.
 <% i18n.vkApi = "vk api" %>
 <% i18n.winnerCertificate = "Сертификат&nbsp;победителя" %>
 
+<% i18n.recommendSystem = "рекомендательная система" %>
+<% i18n.report = "Отчет" %>
+
 <% i18n.cpp = "c++" %>
 <% i18n.boost = "boost" %>
 <% i18n.boostAsio = "boost asio" %>
@@ -150,18 +152,6 @@ MLP & Rayman Legends кроссовер.
 
 <% i18n.bot = "бот" %>
 <% i18n.description = "Описание" %>
-
-<% i18n.teamWork = "работа в команде" %>
-<% i18n.game = "геймдев" %>
-<% i18n.unity3d = "unity3d" %>
-<% i18n.uframe = "uframe" %>
-<% i18n.spine = "spine" %>
-<% i18n.vk = "ВК" %>
-<% i18n.youTube = "Ютюб" %>
-
-<% i18n.freelance = "фриланс" %>
-<% i18n.steam = "Стим" %>
-<% i18n.steamGreenlight = "steam greenlight" %>
 
 <% i18n.seeGitHub = "Посмотреть опенсорс на Гитхабе" %>
 <% i18n.byLang = "По языкам" %>
