--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -52,7 +52,7 @@
 It will be published soon in CEUR-WS and indexed in Scopus.
 <br> 
 We consider the development of a hybrid chatbot system, which can respond to the FAQ, and conduct a dialogue using the knowledge base.
-The knowledge base uses a meta-graph model.
+The knowledge base uses a metagraph model.
 ` %>
 
 <%# Portfolio %>
