--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -150,7 +150,7 @@ Forwards posts from the VK group to the Telegram channel.
 <% i18n.telegramApi = "telegram api" %>
 <% i18n.documentation = "Documentation" %>
 
-<% i18n.bot = "бот" %>
+<% i18n.bot = "bot" %>
 <% i18n.description = "Description" %>
 
 <% i18n.seeGitHub = "See open source on GitHub" %>
