--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -95,7 +95,7 @@
 
 <% i18n.movieRecommendations = "Рекомендательная система фильмов" %>
 <% i18n.movieRecommendationsDesc = `
-Реализовывал два способа и как ответ брал максимальную вероятность:
+Реализовывал два способа вычисления возможного лайка фильма и как ответ брал максимальную вероятность из них:
 <br>
 1. Использовал SVD-разложение матрицы {люди х фильмы} и брал косинусное расстояние между U[человек, все компоненты] * s и Vt[все компоненты, фильм].
 <br>
