--- a/src/blocks/education/index.ejs
+++ b/src/blocks/education/index.ejs
@@ -17,7 +17,7 @@
         </li>
         <li class="education-item">
             <p class="education-item__text">
-                <strong><%- i18n.introToMl %></strong> / <%- i18n.hse %>
+                <strong><%- i18n.introToMl %></strong>&nbsp;/ <%- i18n.hse %>
             </p>
             <p class="education-item__additional-text"><%- i18n.introToMlDesc %></p>
             <p class="education-item__additional-text">
