--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -34,12 +34,12 @@
 <% i18n.technopark = "Technopark Mail.Ru" %>
 <% i18n.technoparkDesc = "2017–2018, Software Architect, Web, Highload, Java, Spring, C++, Python." %>
 <% i18n.program = "Curriculum" %>
-<% i18n.firstCourseProject = "First year project" %>
+<% i18n.firstCourseProject = "First&nbsp;year&nbsp;project" %>
 <% i18n.introToMl = "Introduction to machine learning" %>
 <% i18n.hse = "University Higher School of Economics" %>
 <% i18n.introToMlDesc = "Aug 2016. Decision trees, SVM, regression, clusterization, PCA, neural networks, boosting." %>
 <% i18n.courseSite = "Site" %>
-<% i18n.courseraCertificate = "Coursera certificate" %>
+<% i18n.courseraCertificate = "Coursera&nbsp;certificate" %>
 
 <%# Activity %>
 <% i18n.activity = "Activity" %>
