--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -34,12 +34,12 @@
 <% i18n.technopark = "Технопарк Mail.Ru" %>
 <% i18n.technoparkDesc = "2017–2018, Системный архитектор, Web, Highload, PostgreSQL, C++, Python." %>
 <% i18n.program = "Программа" %>
-<% i18n.firstCourseProject = "Проект 1-го курса" %>
+<% i18n.firstCourseProject = "Проект&nbsp;1-го&nbsp;курса" %>
 <% i18n.introToMl = "Введение в машинное обучение" %>
 <% i18n.hse = "НИУ&nbsp;ВШЭ" %>
 <% i18n.introToMlDesc = "Авг 2016. Деревья, SVM, регрессия, кластеризация, PCA, нейросети, бустинг." %>
 <% i18n.courseSite = "Страница курса" %>
-<% i18n.courseraCertificate = "Сертификат Курсеры" %>
+<% i18n.courseraCertificate = "Сертификат&nbsp;Курсеры" %>
 
 <%# Activity %>
 <% i18n.activity = "Деятельность" %>
@@ -47,7 +47,7 @@
 <% i18n.technoparkMentorshipDesc = "Фронтенд, фев 2018 – текущее время." %>
 <% i18n.metagraphPaper = "«The hybrid chatbot system combining Q&A and knowledgebase approaches»" %>
 <% i18n.paper = "научная статья" %>
-<% i18n.paperAnnotation = "Аннотация статьи" %>
+<% i18n.paperAnnotation = "Аннотация&nbsp;статьи" %>
 <% i18n.metagraphPaperDesc = `
 Скоро будет опубликована в CEUR-WS и проиндексирована в Scopus.
 <br> 
