Forgot to commit i18n fixes

--- a/src/blocks/work/index.ejs
+++ b/src/blocks/work/index.ejs
@@ -142,8 +142,8 @@
 
 <div class="section-with-margin extra-footer">
     <img class="contacts-links__icon" src="images/icons/instagram.png" alt="Instagram">
-    <a class="contacts-links__link" target="_blank" href="https://instagram.com/reo7sp">Ещё Инстаграм</a>
+    <a class="contacts-links__link" target="_blank" href="https://instagram.com/reo7sp"><%- i18n.andInstagram %></a>
     <br>
     <img class="contacts-links__icon" src="images/icons/things.png" alt="Штуки">
-    <a class="contacts-links__link" target="_blank" href="https://olezh.es">Штуки</a>
+    <a class="contacts-links__link" target="_blank" href="https://olezh.es"><%- i18n.things %></a>
 </div>
