--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -155,3 +155,6 @@ Forwards posts from the VK group to the Telegram channel.
 
 <% i18n.seeGitHub = "See open source on GitHub" %>
 <% i18n.byLang = "By language" %>
+
+<% i18n.andInstagram = "And Instagram" %>
+<% i18n.things = "Things" %>
