--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -155,3 +155,6 @@ C++ библиотека для Telegram bot API.
 
 <% i18n.seeGitHub = "Посмотреть опенсорс на Гитхабе" %>
 <% i18n.byLang = "По языкам" %>
+
+<% i18n.andInstagram = "Ещё Инстаграм" %>
+<% i18n.things = "Штуки" %>
