--- a/src/i18n/en.ejs
+++ b/src/i18n/en.ejs
@@ -30,7 +30,11 @@
 <%# Education %>
 <% i18n.education = "Education" %>
 <% i18n.bauman = "Bauman Moscow State Technical University" %>
-<% i18n.baumanDesc = "2016–2020, Bachelor of Engineering." %>
+<% i18n.baumanDesc = `
+2016–2018, Bachelor of Engineering. <span style="color: #aaa">(changed faculty)</span>
+<br>
+2018–2021, Bachelor of Computer Science.
+` %>
 <% i18n.technopark = "Technopark Mail.Ru" %>
 <% i18n.technoparkDesc = "2017–2018, Software Architect, Web, Highload, Java, Spring, C++, Python." %>
 <% i18n.program = "Curriculum" %>
@@ -38,7 +42,7 @@
 <% i18n.introToMl = "Introduction to machine learning" %>
 <% i18n.hse = "University Higher School of Economics" %>
 <% i18n.introToMlDesc = "Aug 2016. Decision trees, SVM, regression, clusterization, PCA, neural networks, boosting." %>
-<% i18n.courseSite = "Site" %>
+<% i18n.courseSite = "Curriculum" %>
 <% i18n.courseraCertificate = "Coursera&nbsp;certificate" %>
 
 <%# Activity %>
@@ -50,7 +54,7 @@
 <% i18n.paperAnnotation = "Annotation" %>
 <% i18n.metagraphPaperDesc = `
 It will be published soon in CEUR-WS and indexed in Scopus.
-<br> 
+<br>
 We consider the development of a hybrid chatbot system, which can respond to the FAQ, and conduct a dialogue using the knowledge base.
 The knowledge base uses a metagraph model.
 ` %>
