--- a/src/i18n/ru.ejs
+++ b/src/i18n/ru.ejs
@@ -30,7 +30,11 @@
 <%# Education %>
 <% i18n.education = "Образование" %>
 <% i18n.bauman = "МГТУ им. Н.Э. Баумана" %>
-<% i18n.baumanDesc = "2016–2020, Машиностроительные технологии." %>
+<% i18n.baumanDesc = `
+2016–2018, Машиностроительные технологии. <span style="color: #aaa">(перевелся)</span>
+<br>
+2018–2021, Информатика и системы управления.
+` %>
 <% i18n.technopark = "Технопарк Mail.Ru" %>
 <% i18n.technoparkDesc = "2017–2018, Системный архитектор, Web, Highload, PostgreSQL, C++, Python." %>
 <% i18n.program = "Программа" %>
@@ -50,7 +54,7 @@
 <% i18n.paperAnnotation = "Аннотация&nbsp;статьи" %>
 <% i18n.metagraphPaperDesc = `
 Скоро будет опубликована в CEUR-WS и проиндексирована в Scopus.
-<br> 
+<br>
 Рассматривается разработка гибридной системы чат-ботов, которая может так и отвечать по FAQ, так и вести диалог с использованием базы знаний.
 Для базы знаний используется метаграфовая модель.
 ` %>
